# Site-Ar-condicionado

./: .gitignore  README.md  freeze.py  index.html  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
src/: __init__.py  config.py
src/routes/: __init__.py
src/static/css/: style.css
src/templates/: index.html
static/js/: main.js
tests/: conftest.py  test_config.py  test_routes.py
