[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ale-arcondicionado"
version = "1.0.0"
description = "Site institucional de divulgação para empresa de ar-condicionado em São Paulo"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "frozen-flask>=1.0.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[project.scripts]
dev    = "run:main"
freeze = "freeze:main"

[tool.pytest.ini_options]
testpaths   = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
